District View optimizations

--- a/Townships/Townships/Properties/Resources.resx
+++ b/Townships/Townships/Properties/Resources.resx
@@ -118,8 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="tiers-0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tiers-0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Tiers-3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Tiers-3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="tiers-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tiers-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -127,7 +127,25 @@
   <data name="tiers-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tiers-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Tiers-3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Tiers-3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="tiers-0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tiers-0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="locked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\locked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="factory_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\factory_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="farm_cow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\farm_cow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="house_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\house_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="house_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\house_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="locked_plot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\locked_plot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
